# scielo_exports_doaj

./: .travis.yml  README.md  requirements.txt  setup.cfg
exporter/: __init__.py  config.py  doaj.py  interfaces.py  main.py  utils.py
tests/: test_config.py  test_doaj.py  test_main.py  test_utils.py
tests/fixtures/: fake-article.json  full-articles.json
