[metadata]
name = scielo_exports_doaj
version = 1.2.0
author = Paty Morimoto
description = SciELO DOAJ metadata exporter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scieloorg/scielo_exports_doaj/
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
  articlemetaapi >= 1.26
  tqdm >= 4.62
  tenacity >= 8.0

[options.extras_require]
tests =
  vcrpy

[options.entry_points]
console_scripts =
    scielo-export = exporter:export_documents
